--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
         maven {
             url 'http://download.crashlytics.com/maven'
         }
-        maven {
-            url "${System.env.HOME}/.m2/repository"
-        }
-        maven { url 'https://maven.fabric.io/repo' }
+//        maven {
+//            url "${System.env.HOME}/.m2/repository"
+//        }
+//        maven { url 'https://maven.fabric.io/repo' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.3'
@@ -25,9 +25,9 @@ allprojects {
         maven {
             url 'http://download.crashlytics.com/maven'
         }
-        maven {
-            url "${System.env.HOME}/.m2/repository"
-        }
-        maven { url 'https://maven.fabric.io/repo' }
+//        maven {
+//            url "${System.env.HOME}/.m2/repository"
+//        }
+//        maven { url 'https://maven.fabric.io/repo' }
     }
 }
