--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -26,16 +26,16 @@ android {
 
         signed {
             storeFile = file(getRootDir().toString()+"/keystore/release.keystore")
-            storePassword = "apalon"
-            keyAlias = "releasekey"
-            keyPassword = "apalon"
+            storePassword = "a"
+            keyAlias = "a"
+            keyPassword = "a"
         }
 
         signeddebug {
             storeFile = file(getRootDir().toString()+"/keystore/debug.keystore")
-            storePassword = "android"
-            keyAlias = "androiddebugkey"
-            keyPassword = "android"
+            storePassword = "a"
+            keyAlias = "a"
+            keyPassword = "a"
         }
     }
 
@@ -48,30 +48,29 @@ android {
         }
 
         release {
-            debuggable false
-            signingConfig signingConfigs.signed
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'/*, file(getRootDir().toString()+"/watchfaceslib/proguard-rules.pro")*/
-            minifyEnabled true
+            minifyEnabled false
             zipAlignEnabled true
             shrinkResources true
         }
     }
 
-    lintOptions {
-        abortOnError false
-        lintConfig file("lint.xml")
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
+    compile "com.google.android.support:wearable:1.1.0"
+
+    compile project(':common')
 
     //for google analytics
 //    compile "com.google.android.gms:play-services-base:$project.GOOGLE_PLAY_SERVICES_VERSION"
 
 
     compile "com.google.android.gms:play-services-wearable:$project.GOOGLE_PLAY_SERVICES_VERSION"
+    compile "com.google.android.gms:play-services-gcm:$project.GOOGLE_PLAY_SERVICES_VERSION"
 
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
@@ -95,9 +94,10 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okio:okio:1.2.0'
 
-    compile 'com.facebook.android:facebook-android-sdk:3.23.0'
+//    compile 'com.facebook.android:facebook-android-sdk:3.23.0'
 
-    compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
-        transitive = true;
-    }
+//    compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
+//        transitive = true;
+//    }
+
 }
