--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -27,14 +27,14 @@ android {
         }
 
         signed {
-            storeFile = file(getRootDir().toString()+"/keystore/release.keystore")
+            storeFile = file(getRootDir().toString() + "/keystore/release.keystore")
             storePassword = "apalon"
             keyAlias = "releasekey"
             keyPassword = "apalon"
         }
 
         signeddebug {
-            storeFile = file(getRootDir().toString()+"/keystore/debug.keystore")
+            storeFile = file(getRootDir().toString() + "/keystore/debug.keystore")
             storePassword = "android"
             keyAlias = "androiddebugkey"
             keyPassword = "android"
@@ -66,6 +66,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':common')
 
     compile 'pl.tajchert:exceptionwear:0.1.2'
     compile 'com.crashlytics.android:crashlytics:1.1.13'
